# frads-gym

./: .gitignore  .nextcloudignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
examples/: frads-gym_test.py
examples/data/: RefBldgMediumOfficeNew2004_v1.4_7.2_3C_USA_CA_SAN_FRANCISCO.idf  RefBldgMediumOfficeNew2004_v1.4_7.2_3C_USA_CA_SAN_FRANCISCO_V2510.idf  RefBldgMediumOfficeNew2004_v1.4_7.2_3C_USA_CA_SAN_FRANCISCO_transition.audit  example_config.json  gs_ec01.json  gs_ec06.json  gs_ec18.json  gs_ec60.json
examples/simulation_output_20260121_091146/Matrices/: 5a572f6cc1d2afa2.npz  95424024436504ab.npz  d4fca8724787dedc.npz  fd1bd7d63b422918.npz
examples/simulation_output_20260121_091146/Octrees/: 4YZ8A.oct  CH7DC.oct  DOAN9.oct  FPMYH.oct  IU3RS.oct  J3HRG.oct  PFY4O.oct  PN7GH.oct  QRDH4.oct  SSBCI.oct  TE71Y.oct  W1LTI.oct
frads_gym/: __init__.py
frads_gym/envs/: __init__.py  frads_gym.py  frads_wrapper.py
frads_gym/envs/archiv/: frads_gym copy.py  frads_gym.py  frads_wrapper.py  frads_wrapper_org123.py  frads_wrapper_test.py
frads_gym/envs/archiv/V1/: frads_gym.py  frads_wrapper.py
frads_gym/wrappers/: __init__.py
