[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frads_gym"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "frads-gym"
version = "0.1.0"
description = "A Gymnasium environment for building facade control with frads (framework for radiance simulation)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Silas Kalmbach", email = "silas.kalmbach@gmail.com"}
]
keywords = ["gymnasium", "reinforcement-learning", "building-simulation", "frads", "energyplus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gymnasium>=1.0.0",
    "pandas>=2.0.0",
    "frads>=2.0.0",
    "pyenergyplus @ file:./wheels/pyenergyplus-25.2.0-py3-none-any.whl",
]

[project.urls]
Homepage = "https://github.com/silaskalmbach/frads-gym"
Repository = "https://github.com/silaskalmbach/frads-gym"

[project.optional-dependencies]
dev = ["pre-commit"]
